@@ -25,7 +25,18 @@ namespace libvoikko { namespace autocorrect {
 
 class AutoCorrect {
 	public:
+		/**
+		 * Adds GC errors from the static list of incorrect words or word combinations.
+		 */
 		static void autoCorrect(int handle, const libvoikko::grammar::Sentence * sentence);
+	
+	private:
+		/**
+		 * Traverse trie from node initial through the characters in string str.
+		 * Returns 0 if there is no such path in the trie, otherwise returns the
+		 * index of the node at the last character of str.
+		 */
+		static size_t traverse(size_t initial, const wchar_t * str, size_t strlen);
 };
 
 } }
