@@ -30,29 +30,6 @@ using namespace libvoikko::grammar;
 
 namespace libvoikko {
 
-void gc_static_replacements(int handle, const Sentence * sentence) {
-	for (size_t i = 0; i + 2 < sentence->tokenCount; i++) {
-		Token t = sentence->tokens[i];
-		if (t.type != TOKEN_WORD) continue;
-		if (wcscmp(t.str, L"joten")) continue;
-		t = sentence->tokens[i+1];
-		if (t.type != TOKEN_WHITESPACE) continue;
-		t = sentence->tokens[i+2];
-		if (t.type != TOKEN_WORD) continue;
-		if (wcscmp(t.str, L"kuten")) continue;
-		voikko_gc_cache_entry * e = gc_new_cache_entry(1);
-		if (!e) return;
-		e->error.error_code = GCERR_WRITE_TOGETHER;
-		e->error.startpos = sentence->tokens[i].pos;
-		e->error.errorlen = 10 + sentence->tokens[i+1].tokenlen;
-		e->error.suggestions[0] = new char[11];
-		if (e->error.suggestions[0]) {
-			strcpy(e->error.suggestions[0], "jotenkuten");
-		}
-		gc_cache_append_error(handle, e);
-	}
-}
-
 void gc_local_punctuation(int handle, const Sentence * sentence) {
 	voikko_gc_cache_entry * e;
 	for (size_t i = 0; i < sentence->tokenCount; i++) {
