@@ -19,7 +19,7 @@
 #ifndef VOIKKO_GRAMMAR_ERROR_H
 #define VOIKKO_GRAMMAR_ERROR_H
 
-#define GCERR_WRITE_TOGETHER 1
+#define GCERR_INVALID_SPELLING 1
 #define GCERR_EXTRA_WHITESPACE 2
 #define GCERR_SPACE_BEFORE_PUNCTUATION 3
 #define GCERR_EXTRA_COMMA 4
