@@ -1,3 +1,7 @@
+2009-03-08 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Read replacement suggestions from data/autocorrect/fi_FI.xml.
+
 2009-02-25 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Change struct gc_sentence into class Sentence.
